kubernetes/node-feature-discovery-operator/base/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-nfd
  labels:
    kubernetes.io/metadata.name: openshift-nfd
    security.openshift.io/scc.podSecurityLabelSync: "true"
    openshift.io/cluster-monitoring: "true"
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce-version: latest
  annotations:
    security.openshift.io/MinimallySufficientPodSecurityStandard: privileged
